--- a/src/index.html
+++ b/src/index.html
@@ -13,31 +13,31 @@
 </head>
 
 <body class="container">
-
-  <div class="flex-row justify-content--space-betwen">
+ <div class="content-wrapper">
+  <div class="main__wrapper">
     <main>
       <div class="top-wrapper">
         <div class="nav">
-          <ul class="hot-news flex-row font-family--PT-sans">
+          <ul class="hot-news">
             <li>Hot themes</li>
             <li>EURO-2016 Playoffs</li>
             <li>El'Classico</li>
           </ul>
         </div>
-        <div class="carousel flex-row">
+        <div class="carousel">
           <div class="carousel-image"></div>
           <div class="carousel-text">
-            <p class="carousel-text__title font-family--PT-sans">
+            <p class="carousel-text__title">
               <a>Jurgen Klopp makes a sexy Liverpool</a>
             </p>
-            <p class="calousel-text__descr font-family--PT-sans">
+            <p class="calousel-text__descr">
               <a href="">Liverpool outcast Jose Enrique set to
                 be handed lifeline by Jurgen Klopp</a>
             </p>
             <div class="carousel-count">
               <i class="fas fa-angle-left"></i>
               <span>
-                <p class="carousel-count__text font-family--PT-sans">7/20</p>
+                <p class="carousel-count__text">7/20</p>
               </span>
               <object data="./img/circle.svg" height="18px" width="18px"></object>
               <i class="fas fa-angle-right"></i>
@@ -46,10 +46,10 @@
         </div>
         <div class="news-main">
           <div class="news-title">
-            <p class="news-title__text padding-right--12px font-family--PT-sans">Main News</p>
+            <p class="news-title__text padding-right--12px">Main News</p>
           </div>
-          <div class="news-main_content flex-row">
-            <div>
+          <div class="news-main_content">
+            <div class="news-main_item">
               @@include('./partials/main-content__item/_main-content__item.html',
               {"Img_src":"./img/ball.png",
               "Img_alt":"Golden ball",
@@ -64,7 +64,7 @@
               "iconAfterText":""
               })
             </div>
-            <div>
+            <div class="news-main_item">
               @@include('./partials/main-content__item/_main-content__item.html',
               {"Img_src":"./img/messi.png",
               "Img_alt":"Messi with golden ball",
@@ -79,7 +79,7 @@
               "iconAfterText":""
               })
             </div>
-            <div>
+            <div class="news-main_item">
               @@include('./partials/main-content__item/_main-content__item.html',
               {"Img_src":"./img/cr7.png",
               "Img_alt":"CR7",
@@ -94,7 +94,7 @@
               "iconAfterText":""
               })
             </div>
-            <div>
+            <div class="news-main_item">
               @@include('./partials/main-content__item/_main-content__item.html',
               {"Img_src":"./img/ribery.png",
               "Img_alt":"Ribery",
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <article class="flex-row justify-content--space-betwen">
+      <article>
         <div class="news-feed">
           <div class="news-column">
             <div class="news-title border-color--red">
@@ -120,7 +120,7 @@
                 Last News
               </p>
             </div>
-            <ul class="news-feed_content font-family--PT-sans">
+            <ul class="news-feed_content">
               <li><a href="">Real Madrid players to gaffer: up and at 'em!</a></li>
               <li><a href="">Swedes indebted to talismanic Ibrahimovic<span class="source">marca.com</span></a></li>
               <li><a href="">2016 European Championship to go ahead in France</a></li>
@@ -140,14 +140,14 @@
                 Newsfeed
               </p>
             </div>
-            <div class="news-with-pic flex-row justify-content--space-betwen">
+            <div class="news-with-pic">
               <img src="./img/Zlatan.png" alt="Zlatan">
-              <a href="" class="news-with-pic-text font-family--PT-sans icon-camera"> Zlatan Ibrahimovic on target as
+              <a href="" class="news-with-pic-text icon-camera"> Zlatan Ibrahimovic on target as
                 Sweden qualify
                 with draw in Denmark</a>
             </div>
-            <ul class="news-feed_content font-family--PT-sans">
-              <li> <a href="" class="font-family--PT-sans">Alvaro Morata insists Juventus are “still hungry”
+            <ul class="news-feed_content ">
+              <li> <a href="">Alvaro Morata insists Juventus are “still hungry”
                   and targets victory over Milan on Saturday.</a>
               </li>
               <li> <a href="" class="icon-play">Ecuador stay perfect as Argentina, Brazil win</a> </li>
@@ -163,7 +163,7 @@
           "Img_alt":"Champions league cup",
           "DescrText":"Here is how Leage Champions trophy looks like",
           "newsWidth":"newsWidth--220px",
-          "fontWeight":"fontWeight--bold",
+          "fontWeight":"fontweight--bold",
           "fontSize":"fontSize--18px",
           "flowDrirection":"",
           "descrSize":"",
@@ -177,7 +177,7 @@
           "Img_alt":"Casillas",
           "DescrText":"Casillas got some peace of paper",
           "newsWidth":"newsWidth--220px",
-          "fontWeight":"fontWeight--bold",
+          "fontWeight":"fontweight--bold",
           "fontSize":"fontSize--18px",
           "flowDrirection":"",
           "descrSize":"",
@@ -191,7 +191,7 @@
           "Img_alt":"Fan Girls",
           "DescrText":"Bayern Munich vs Barcelona. Fangirls &colon;&rpar;",
           "newsWidth":"newsWidth--220px",
-          "fontWeight":"fontWeight--bold",
+          "fontWeight":"fontweight--bold",
           "fontSize":"fontSize--18px",
           "flowDrirection":"",
           "descrSize":"",
@@ -203,11 +203,11 @@
         </div>
       </article>
     </main>
-
+  </div>  
     <aside>
       <div class="news-video__wrapper">
-        <div class="news-title flex-row justify-content--center padding--0-12px">
-          <p class="news-title__text text-color--purple font-family--PT-sans text-transform--uppercase padding--0-12px">
+        <div class="news-title-center padding--0-12px">
+          <p class="news-title__text text-color--purple text-transform--uppercase padding--0-12px">
             Видео</p>
         </div>
         <div class="news-video__item">
@@ -218,8 +218,8 @@
           "newsWidth":"newsWidth--300px",
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Big",
-          "fontWeight":"fontWeight--bold",
-          "marginLeft":"marginLeft--10px",
+          "fontWeight":"fontweight--bold",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"play-icon",
           "iconAfterText":""
@@ -233,8 +233,8 @@
           "newsWidth":"newsWidth--300px",
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Big",
-          "fontWeight":"fontWeight--bold",
-          "marginLeft":"marginLeft--10px",
+          "fontWeight":"fontweight--bold",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"play-icon",
           "iconAfterText":""
@@ -248,8 +248,8 @@
           "newsWidth":"newsWidth--300px",
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Big",
-          "fontWeight":"fontWeight--bold",
-          "marginLeft":"marginLeft--10px",
+          "fontWeight":"fontweight--bold",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"play-icon",
           "iconAfterText":""
@@ -263,8 +263,8 @@
           "newsWidth":"newsWidth--300px",
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Big",
-          "fontWeight":"fontWeight--bold",
-          "marginLeft":"marginLeft--10px",
+          "fontWeight":"fontweight--bold",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"play-icon",
           "iconAfterText":""
@@ -278,8 +278,8 @@
           "newsWidth":"newsWidth--300px",
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Big",
-          "fontWeight":"fontWeight--bold",
-          "marginLeft":"marginLeft--10px",
+          "fontWeight":"fontweight--bold",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"play-icon",
           "iconAfterText":""
@@ -288,7 +288,7 @@
 
         <div class="more-videos">
           <div class="news-title border-width--5px">
-            <p class="news-title__text text-align--top font-family--PT-sans">
+            <p class="news-title__text text-align--top">
               <a href="" class="text-color--blue">Больше видео &rarr;</a>
             </p>
           </div>
@@ -308,7 +308,7 @@
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Biggest",
           "fontWeight":"",
-          "marginLeft":"marginLeft--10px",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"",
           "iconAfterText":""
@@ -323,7 +323,7 @@
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Biggest",
           "fontWeight":"",
-          "marginLeft":"marginLeft--10px",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"",
           "iconAfterText":"icon-camera"
@@ -337,7 +337,7 @@
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Biggest",
           "fontWeight":"",
-          "marginLeft":"marginLeft--10px",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"",
           "iconAfterText":""
@@ -351,7 +351,7 @@
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Biggest",
           "fontWeight":"",
-          "marginLeft":"marginLeft--10px",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"",
           "iconAfterText":""
@@ -365,7 +365,7 @@
           "flowDrirection":"flex-row",
           "descrSize":"descrSize--Big",
           "fontWeight":"",
-          "marginLeft":"marginLeft--10px",
+          "marginLeft":"marginleft--10px",
           "fontSize":"",
           "icon-on-image":"",
           "iconAfterText":""
@@ -375,12 +375,12 @@
         <div class="news-title  border-width--5px margin-top--10px"></div>
       </div>
     </aside>
-  </div>
+ </div> 
   <footer>
     <div class="news-title">
       <p class="news-title__text padding-right--12px">Обзор</p>
     </div>
-    <div class="news-review flex-row">
+    <div class="news-review">
       <div>
         @@include('./partials/news-review__item/_news-review__item.html',
         {"TitleText":"Знакомства", "Img_src":"./img/movie-real.png", "Img_alt":"Gypsy",
