--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./main.scss">
-    <title>First project</title>
-    <script src="./js/main.js" defer></script>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./main.scss">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+  <title>Empat Belas</title>
+  <script src="./js/main.js" defer></script>
+  <script src="https://kit.fontawesome.com/b1cf813757.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+
+    <div class="icons__wrapper">
+      <div class="search__wrapper">
+        <i class="fas fa-search"></i>
+      </div>
+      <ul class="menu__wrapper">
+        <i class="fas fa-bars"></i>
+        <div class="menu__items">
+          <li>About</li>
+          <li>Events</li>
+          <li>Location</li>
+          <li>Booking</li>
+        </div>
+      </ul>
+    </div>
+
+  </header>
+  <main>
+    <div class="container">
+      <div class="logo"></div>
+      <div class="top__wrapper">
+        <h1 class="top__text">
+          Delicious & fresh baked Sweets
+        </h1>
+        <div class="top__button"><p>veiew menu</p></div>
+        <div class="top__icons">
+          <div class="icon-sweets"></div>
+          <div class="icon-icecream"></div>
+          <div class="icon-drink"></div>
+          <div class="icon-special"></div>
+        </div>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
-
-
-
-
