--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
                 <p class="date-month">February</p>
               </div>
               <p class="main-event__name">
-                 Special Valentine Day
+                Special Valentine Day
               </p>
               <p class="main-event__location">
                 18.00 PM - Deck Floor Your Street 123
@@ -155,6 +155,76 @@
       </div>
     </div>
   </div>
+  <div class="location">
+    <div class="container">
+      <div class="location__content">
+        <div class="location__map">
+          <iframe class="ifame"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2431.850629772266!2d-116.16608753805632!3d43.54458985452408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef7cfb2d36b6f%3A0x2b5413d0a451ab39!2sThe%20TK%20Bar!5e0!3m2!1sru!2sby!4v1621440418870!5m2!1sru!2sby">
+          </iframe>
+        </div>
+        <div class="item__inner">
+          <div class="location__item">
+            <p class="location__title">out location</p>
+            <div class="address">
+              <p class="address__title">Store1</p>
+              <p class="address__street">Street name with number 123</p>
+              <p class="adress__city">12554 - My City</p>
+              <p class="adress__phone">Phone: 123 2252 6565</p>
+            </div>
+            <div class="address">
+              <p class="address__title">Store2</p>
+              <p class="address__street">Street name with number 123</p>
+              <p class="adress__city">12554 - My City</p>
+              <p class="adress__phone">Phone: 123 2252 6565</p>
+            </div>
+            <p class="location__email">Email us:
+              <a href="mailto:abc@youremail.com">abc@youremail.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="booking" id="booking">
+    <div class="container">
+      <div class="booking__wrapeer">
+        <p class="booking__title">
+          Book Your Dining Experience
+        </p>
+        <p class="booking__text">
+          Want to tryout our dish?
+          Than what are You waiting for?
+          Book online now and get amazing price and
+          discount available only on our site.</p>
+        <p class="booking__opentime">
+          We open everyday from 7 AM until 4 PM
+        </p>
+
+        <form action="/test" method="POST" class="form" id="form1">
+          <input type="text" placeholder="Name" class="input-name"> 
+          <select name="location-select" id="location-select" aria-placeholder="Location">
+            <option value="address1">Location</option>
+            <option value="address1">address 1</option>
+            <option value="address2">address 2</option>
+          </select>
+          <input type="date" placeholder="Date">
+          <input type="time" placeholder="Time">
+        </form>
+        <button type="submit" class="top__button" form="form1">
+          <p>book now </p>
+          <span class="material-icons">
+            east
+          </span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      
+    </div>
+  </footer>
 </body>
 
 </html>
